# serato-tags

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: pypi.yml
scripts/: database_v2.py  serato_markers_.py
